# navvi

./: .gitignore  CONTRIBUTING.md  README.md  install-companions.sh  package.json  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/: dependabot.yml
.github/workflows/: publish-container.yml
.navvi/personas/: fry-dev.yml  schema.md
.navvi/profiles/: .gitignore
companions/: browse.md  login.md
container/: Dockerfile  marionette.py  navvi-server.py  requirements.txt  start.sh
docs/: captchas.md  credentials.md
mcp/: README.md  mcp.json  requirements.txt  server.mjs  server.py
personas/: fry.yaml
scripts/: export-profile.sh  import-profile.sh  launch-chrome.sh  launch-pinchtab.sh  navvi.sh
skills/navvi-browse/: SKILL.md
skills/navvi-login/: SKILL.md
skills/navvi-signup/: SKILL.md
skills/navvi-signup/playbooks/: outlook.md
src/navvi/: __init__.py  flows.py  store.py  vision.py
