[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "navvi"
version = "3.15.0"
description = "Give your AI agent a real browser identity — MCP server with persistent personas, anti-detection browser, and credential vault."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Max Findel" },
]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "browser-automation",
    "browser",
    "automation",
    "ai-agent",
    "ai",
    "agent",
    "persona",
    "firefox",
    "camoufox",
    "claude",
    "anthropic",
    "web-automation",
    "credential-management",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
vision = ["anthropic>=0.40.0"]

[project.scripts]
navvi = "navvi:main"

[project.urls]
Homepage = "https://github.com/fellowship-dev/navvi"
Repository = "https://github.com/fellowship-dev/navvi"
Issues = "https://github.com/fellowship-dev/navvi/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/navvi"]
